Fixed a GUI-bug where the OpenID address field was overflowing the surrounding element.

--- a/frontend/content/assets/css/forms.css
+++ b/frontend/content/assets/css/forms.css
@@ -67,7 +67,7 @@ textarea.tall2 {
 
 .openid input {
     padding: .6em 1em .6em 1em;
-    width: 22em;
     margin-bottom: 1em;
+    font-size: 1em;
 }
 
